--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
   },
   "dependencies": {
     "@apollo/client": "^3.12.7",
-    "@lottiefiles/dotlottie-react": "^0.12.1",
     "@lottiefiles/react-lottie-player": "^3.6.0",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.9",
-    "framer-motion": "^11.18.0",
+    "clsx": "^2.1.1",
     "graphql": "^16.10.0",
+    "motion": "^12.4.10",
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
-    "react-initials-avatar": "^1.1.2"
+    "react-initials-avatar": "^1.1.2",
+    "tailwind-merge": "^3.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
